Background image added

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 </head>
 <link rel="stylesheet" href="css/index.css">
 <body>
-    <div class="container">
-        <h1>WEATHER APP</h1>
-        <form action="/" method="post">
-            <label for="city">ENTER CITY NAME : </label>
-            <input id="city" type="text" name="cityname">
-            <button type="submit">OK</button>
-        </form>
-    </div>
+    <h1>WEATHER APP</h1>
+    <form action="/" method="post">
+        <label for="city">ENTER CITY NAME : </label>
+        <input id="city" type="text" name="cityname">
+        <button type="submit">OK</button>
+    </form>
+    <!-- <img class="background" src="images/background.jpeg" alt=""> -->
+    
 </body>
 </html>
