Clouds and sun added

--- a/index.html
+++ b/index.html
@@ -14,6 +14,18 @@
         <input id="city" type="text" name="cityname">
         <button type="submit">OK</button>
     </form>
+
+    <div class="sky">
+        <div class="sun">
+            <div class="sun-face"></div>
+            <div class="sun-rays"></div>
+        </div>
+        <div class="clouds">
+            <div class="cloud"></div>
+            <div class="cloud"></div>
+            <div class="cloud"></div>
+        </div>
+    </div>
     
 </body>
 </html>
